--- a/app/src/main/res/layout/activity_pc.xml
+++ b/app/src/main/res/layout/activity_pc.xml
@@ -27,7 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
-        <com.btc.application.ui.extend.ModCollectionQRCodeItemView
+        <!--<com.btc.application.ui.extend.ModCollectionQRCodeItemView
             android:id="@+id/item_modpwd"
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -36,7 +36,7 @@
             app:icon="@drawable/icon_modheadphoto"
             app:name="@string/title_modCollectionQRCode"
             app:show_line="true"
-            app:show_more="true" />
+            app:show_more="true" />-->
 
     </RelativeLayout>
 
