--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -5,4 +5,10 @@
         <item name="android:scaleType">fitXY</item>
         <item name="android:src">@drawable/box</item>
     </style>
+
+    <!--  选择图片上传时，向上滑动特效  -->
+    <style name="main_menu_photo_anim">
+        <item name="android:windowEnterAnimation">@anim/deliver_dialog_in_anim</item>
+        <item name="android:windowExitAnimation">@anim/deliver_dialog_out_anim</item>
+    </style>
 </resources>
