--- a/app/src/main/res/layout/activity_mod_wechat_code.xml
+++ b/app/src/main/res/layout/activity_mod_wechat_code.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".ModCollectionQRCodeActivity">
+    tools:context=".ModWechatCodeActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -50,7 +50,7 @@
         android:src="@drawable/more"
         />
 
-    <com.btc.application.util.CustomBtn
+    <!--<com.btc.application.util.CustomBtn
         android:id="@+id/save_image"
         android:layout_width="310dp"
         android:layout_height="35dp"
@@ -67,6 +67,6 @@
         app:layout_constraintTop_toBottomOf="@id/icon"
         app:layout_constraintLeft_toLeftOf="@id/icon"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />-->
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
