--- a/app/src/main/res/layout/activity_mod_wechat_code.xml
+++ b/app/src/main/res/layout/activity_mod_wechat_code.xml
@@ -28,7 +28,7 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="70dp"
         android:singleLine="false"
-        android:text="@string/tip_modCollectionQRCode"
+        android:text="@string/tip_modWechatCode"
         android:textColor="#ffffff"
         android:textColorHint="@color/white"
         android:textSize="16sp"
@@ -42,31 +42,13 @@
 
     <ImageView
         android:id="@+id/icon"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="150dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:layout_marginTop="150dp"
         android:src="@drawable/more"
         />
-
-    <!--<com.btc.application.util.CustomBtn
-        android:id="@+id/save_image"
-        android:layout_width="310dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="650dp"
-        android:layout_marginBottom="50dp"
-        android:background="@drawable/buynow"
-        android:text="@string/sure"
-        android:textColorHint="@color/white"
-        android:textColor="#ffffff"
-        android:textSize="14sp"
-        android:layout_gravity="center_horizontal"
-        android:maxLength="6"
-        android:digits="0123456789"
-        app:layout_constraintTop_toBottomOf="@id/icon"
-        app:layout_constraintLeft_toLeftOf="@id/icon"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />-->
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
