--- a/app/src/main/res/layout/activity_mod_collection_account.xml
+++ b/app/src/main/res/layout/activity_mod_collection_account.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".ScActivity">
+    tools:context=".ModCollectionAccountActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -26,18 +26,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
-        <com.btc.application.ui.extend.ModpwdItemView
+        <com.btc.application.ui.extend.ModWechatCodeItemView
             android:id="@+id/item_modpwd"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="#fff"
             android:layout_marginTop="70dp"
             app:icon="@drawable/modpwd"
-            app:name="@string/title_modpwd"
+            app:name="@string/title_mod_wechat_code"
             app:show_line="true"
             app:show_more="true" />
 
-        <com.btc.application.ui.extend.SetpwdItemView
+        <com.btc.application.ui.extend.ModAlipayCodeItemView
             android:id="@+id/item_setpwd"
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -46,18 +46,18 @@
             android:background="#fff"
             android:layout_marginTop="10dp"
             app:icon="@drawable/setpwd"
-            app:name="@string/title_2ndsetpwd"
+            app:name="@string/title_mod_alipay_code"
             app:show_line="true"
             app:show_more="true" />
 
-        <com.btc.application.ui.extend.ModCollectionAccountItemView
+        <com.btc.application.ui.extend.ModBankCardItemView
             android:id="@+id/item_modQRCode"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="190dp"
             android:background="#fff"
             app:icon="@drawable/icon_modheadphoto"
-            app:name="@string/title_mod_collection_info"
+            app:name="@string/title_mod_bank_account"
             app:show_line="true"
             app:show_more="true" />
 
