--- a/app/src/main/res/layout/activity_mod_wechat_code.xml
+++ b/app/src/main/res/layout/activity_mod_wechat_code.xml
@@ -48,7 +48,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_marginTop="150dp"
-        android:src="@drawable/more"
+        android:src="@drawable/upload"
         />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
