--- a/app/src/main/res/layout/fragment_sell.xml
+++ b/app/src/main/res/layout/fragment_sell.xml
@@ -44,7 +44,7 @@
             android:id="@+id/float_ratio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="14.28%"
+            android:text=""
             android:layout_marginStart="220dp"
             android:layout_marginTop="50dp"
             android:textColorHint="@color/white"
@@ -72,7 +72,7 @@
             android:id="@+id/current_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="0.16"
+            android:text=""
             android:layout_marginStart="5dp"
             android:layout_marginTop="55dp"
             android:textColorHint="@color/white"
@@ -100,7 +100,7 @@
             android:id="@+id/current_average_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="0.15"
+            android:text=""
             android:layout_marginStart="5dp"
             android:layout_marginTop="125dp"
             android:textColorHint="@color/white"
@@ -128,7 +128,7 @@
             android:id="@+id/current_high_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="0.17"
+            android:text=""
             android:layout_marginStart="200dp"
             android:layout_marginTop="125dp"
             android:textColorHint="@color/white"
