--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -5,16 +5,24 @@
     android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
-    <!--姓名 -->
-    <TextView
-        android:layout_width="130dp"
+    <ImageView
+        android:id="@+id/image_expense"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/name"
-        />
-    <!-- 性别-->
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:adjustViewBounds="true"
+        android:maxWidth="72dp"
+        android:maxHeight="72dp"/>
     <TextView
-        android:layout_width="150dp"
+        android:id="@+id/tv_expense_category"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/sex"
-        />
+        android:layout_weight="1"
+        android:padding="10dp"/>
+    <TextView
+        android:id="@+id/tv_expense_money"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="10dp"/>
 </LinearLayout>
