--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.fragment.app.FragmentTabHost
-    android:id="@android:id/tabhost"
+<androidx.fragment.app.FragmentTabHost android:id="@android:id/tabhost"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.btc.application.ui.dashboard.DashboardFragment">
+    tools:context="com.btc.application.ui.dashboard.DashboardFragment"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,6 +30,141 @@
             android:layout_width="fill_parent"
             android:layout_height="500dp"
             android:layout_weight="1">
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/transaction_background"
+                    android:layout_width="450dp"
+                    android:layout_height="184dp"
+                    android:src="@drawable/transaction_background"
+                    tools:ignore="MissingConstraints" />
+
+                <ImageView
+                    android:id="@+id/increase_background"
+                    android:layout_marginStart="210dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_width="130dp"
+                    android:layout_height="70dp"
+                    android:src="@drawable/increase_background"
+                    tools:ignore="MissingConstraints" />
+
+                <TextView
+                    android:id="@+id/title_float_ratio"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/title_float_ratio"
+                    android:layout_marginStart="220dp"
+                    android:layout_marginTop="30dp"
+                    android:textColorHint="@color/white"
+                    android:textColor="#ffffff"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/float_ratio"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:layout_marginStart="220dp"
+                    android:layout_marginTop="50dp"
+                    android:textColorHint="@color/white"
+                    android:textColor="#ffffff"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/title_current_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/title_current_price"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="35dp"
+                    android:textColorHint="@color/white"
+                    android:textColor="#ffffff"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/current_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="55dp"
+                    android:textColorHint="@color/white"
+                    android:textColor="#ffffff"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/title_current_average_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/title_current_average_price"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="105dp"
+                    android:textColorHint="@color/white"
+                    android:textColor="#ffffff"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/current_average_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="125dp"
+                    android:textColorHint="@color/white"
+                    android:textColor="#ffffff"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/title_current_high_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/title_current_high_price"
+                    android:layout_marginStart="200dp"
+                    android:layout_marginTop="105dp"
+                    android:textColorHint="@color/white"
+                    android:textColor="#ffffff"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/current_high_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:layout_marginStart="200dp"
+                    android:layout_marginTop="125dp"
+                    android:textColorHint="@color/white"
+                    android:textColor="#ffffff"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </FrameLayout>
+
             <RelativeLayout android:name="com.btc.application.ui.dashboard.SellFragment"
                 android:id="@+id/fragment_sell"
                 android:layout_width="fill_parent"
