--- a/app/src/main/res/layout/fragment_sell.xml
+++ b/app/src/main/res/layout/fragment_sell.xml
@@ -3,15 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="460dp"
     tools:context="com.btc.application.ui.dashboard.SellFragment">
 
     <!-- ListView控件 -->
     <ListView
         android:id="@+id/lv_expense"
-        android:layout_marginTop="184dp"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="460dp"
+        android:cacheColorHint="@android:color/transparent"
+        android:paddingTop="184dp"
         tools:ignore="MissingConstraints">
 
     </ListView>
