--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="100dp"
-        android:layout_height="80dp"
+        android:layout_height="40dp"
         android:layout_weight="1">
 
         <TextView
@@ -24,7 +24,7 @@
             android:textColor="@color/black"
             android:textSize="12dp" />
 
-        <TextView
+        <!--<TextView
             android:id="@+id/the_second_number"
             android:layout_width="100dp"
             android:layout_height="20dp"
@@ -37,7 +37,7 @@
             android:layout_height="20dp"
             android:maxLines="1"
             android:textColor="@color/black"
-            android:textSize="12dp" />
+            android:textSize="12dp" />-->
 
     </LinearLayout>
 
@@ -49,7 +49,7 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="100dp"
-        android:layout_height="80dp"
+        android:layout_height="40dp"
         android:layout_weight="1"
         android:textSize="12dp">
 
@@ -71,23 +71,6 @@
             android:text="√"
             android:textColor="@color/black" />
 
-        <TextView
-            android:id="@+id/clear"
-            android:layout_width="100dp"
-            android:layout_height="20dp"
-            android:layout_weight="1"
-            android:textSize="12dp"
-            android:text="C"
-            android:textColor="@color/black" />
-
-        <TextView
-            android:id="@+id/delete"
-            android:layout_width="100dp"
-            android:layout_height="20dp"
-            android:layout_weight="1"
-            android:textSize="12dp"
-            android:text="DEL"
-            android:textColor="@color/black" />
     </LinearLayout>
 
 
