--- a/app/src/main/res/layout/item_sell_list.xml
+++ b/app/src/main/res/layout/item_sell_list.xml
@@ -7,37 +7,35 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="100dp"
-        android:layout_height="40dp"
+        android:layout_height="80dp"
         android:layout_weight="1">
 
         <TextView
-            android:id="@+id/the_first_number"
+            android:id="@+id/user_id"
             android:layout_width="100dp"
             android:layout_height="20dp"
             android:textColor="@color/black"
             android:textSize="12dp" />
 
         <TextView
-            android:id="@+id/the_option"
-            android:layout_width="100dp"
-            android:layout_height="20dp"
-            android:textColor="@color/black"
-            android:textSize="12dp" />
-
-        <!--<TextView
-            android:id="@+id/the_second_number"
+            android:id="@+id/sell_count"
             android:layout_width="100dp"
             android:layout_height="20dp"
             android:textColor="@color/black"
             android:textSize="12dp" />
 
         <TextView
-            android:id="@+id/the_equal"
+            android:id="@+id/min_limit"
             android:layout_width="100dp"
             android:layout_height="20dp"
-            android:maxLines="1"
             android:textColor="@color/black"
-            android:textSize="12dp" />-->
+            android:textSize="12dp" />
+
+        <ImageView
+            android:id="@+id/pay_method"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/transaction_background"/>
 
     </LinearLayout>
 
@@ -49,28 +47,32 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="100dp"
-        android:layout_height="40dp"
+        android:layout_height="80dp"
         android:layout_weight="1"
         android:textSize="12dp">
 
         <TextView
-            android:id="@+id/surplus"
+            android:id="@+id/label_price"
             android:layout_width="100dp"
             android:layout_height="20dp"
             android:layout_weight="1"
             android:textSize="12dp"
-            android:textColor="@color/black"
-            android:text="%" />
+            android:textColor="@color/black"/>
 
         <TextView
-            android:id="@+id/root"
+            android:id="@+id/price"
             android:layout_width="100dp"
             android:layout_height="20dp"
             android:layout_weight="1"
             android:textSize="12dp"
-            android:text="√"
             android:textColor="@color/black" />
 
+        <Button
+            android:id="@+id/sell"
+            android:layout_width="100dp"
+            android:layout_height="20dp"
+            android:layout_gravity="start"
+            android:text="@string/action_register"/>
     </LinearLayout>
 
 
